Revert changes to microprofile/metrics CDI extension; not needed for this PR